ajout de machin debug

--- a/pages/accueil.html
+++ b/pages/accueil.html
@@ -56,13 +56,26 @@
 <!-- footer-->
     <footer>
       <div class="Copyright">Copyright &copy; 2018
-        <p class="p1">
-          <a href="https://fr-fr.facebook.com/" target="_blank" class="fa fa-facebook-square" aria-hidden="true"></a>
+        <!-- <p class="p1"> -->
+          <ul>
+      <li><a href="https://fr-fr.facebook.com/" target="_blank"></a>
+        <i class="fa fa-facebook-square" aria-hidden="true"></i>
+      </li>
+      <li><a href="https://twitter.com/?lang=fr" target="_blank"></a>
+        <i class="fa fa-twitter-square" aria-hidden="true"></i>
+      </li>
+      <li><a href="https://www.instagram.com/?hl=fr" target="_blank"></a>
+        <i class="fa fa-instagram" aria-hidden="true"></i>
+      </li>
+      <li><a href="https://maps.google.com/"><img src="IMG/logo-googlemap01.png"></a>
+      </li>
+    </ul>
+          <!-- <a href="https://fr-fr.facebook.com/" target="_blank" class="fa fa-facebook-square" aria-hidden="true"></a> -->
           <!-- <i class="fa fa-facebook-square" aria-hidden="true"></i> -->
-          <a href="https://twitter.com/?lang=fr" target="_blank" class="fa fa-twitter-square" aria-hidden="true"></a>
+          <!-- <a href="https://twitter.com/?lang=fr" target="_blank" class="fa fa-twitter-square" aria-hidden="true"></a> -->
           <!-- <i class="fa fa-twitter-square" aria-hidden="true"></i></a> -->
 
-        </p>
+        <!-- </p> -->
       </div>
     </footer>
 
