moins de 5 ans V2.1

--- a/pages/moinde5ans.html
+++ b/pages/moinde5ans.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="../css/moinde5ans.css" media="all">
   </head>
 
-  <body>
+  <body id="gris">
 
     <section id="Description" >
-      <p>Vous trouverez ici des jouets pour les enfants de 0 a 5 ans, pour les guider dans leur éveil et leur développement tout en s’amusant. Allant du doudou au tricycle ou du coloriage au jeu de construction votre enfant n’aura qu’une seule limite son imagination.</p>
+      <p class="descriptif">Vous trouverez ici des jouets pour les enfants de 0 a 5 ans, pour les guider dans leur éveil et leur développement tout en s’amusant. Allant du doudou au tricycle ou du coloriage au jeu de construction votre enfant n’aura qu’une seule limite son imagination.</p>
     </section>
 
     <section id="Top vente et promo" >
@@ -19,27 +19,43 @@
 
         <figure>
           <img src="../assets/jouet_moin_de_5_ans/Boitede60feutres.jpg" alt="Boite de 60 feutres" />
-          <figcaption><h5>Boite de 60 feutres</h5><button><span>24&euro;99</span></button></figcaption>
+          <figcaption>
+            <h5>Boite de 60 feutres</h5>
+            <button><span>24&euro;99</span></button>
+            <p class="jouets"> Les enfants peuvent créer, dessiner, colorier et ainsi laisser libre cours à leur créativité.<br><br>Ce maxi kit est composé de :<br>- 36 mini feutres à colorier<br>- 8 mini feutres pour fenêtres<br>- 16 feutres à pointe folle<br>- 5 pochoirs<br><br>Ces feutres se lavent à l'eau et au savon sur la peau, et en machine pour les textiles lavables.</p>
+          </figcaption>
         </figure>
 
         <figure>
           <img src="../assets/jouet_moin_de_5_ans/Scenedeconcertcabriolet.jpg" alt="Flipsies Scène de Concert Cabriolet" />
-          <figcaption><h5>Flipsies Scène de Concert Cabriolet</h5><button><span>15&euro;00</span></button></figcaption>
+          <figcaption>
+            <h5>Flipsies Scène de Concert Cabriolet</h5>
+            <button><span>15&euro;00</span></button>
+          </figcaption>
         </figure>
 
         <figure>
           <img src="../assets/jouet_moin_de_5_ans/Remorquefarm.jpg" alt="Remorque de ferme" />
-          <figcaption><h5>Remorque de ferme</h5><button><span>8&euro;00</span></button></figcaption>
+          <figcaption>
+            <h5>Remorque de ferme</h5>
+            <button><span>8&euro;00</span></button>
+          </figcaption>
         </figure>
 
         <figure>
           <img src="../assets/jouet_moin_de_5_ans/Aspergeurpoisson.jpg" alt="Aspergeur d'eau en forme de poisson" />
-          <figcaption><h5>Aspergeur poisson</h5><button><span>6&euro;00</span></button></figcaption>
+          <figcaption>
+            <h5>Aspergeur poisson</h5>
+            <button><span>6&euro;00</span></button>
+          </figcaption>
         </figure>
 
         <figure>
           <img src="../assets/jouet_moin_de_5_ans/Princessedysney.jpg" alt="Princesses Disney - Poupée tournoyante" />
-          <figcaption><h5>Princesses Disney - Poupée tournoyante</h5><button><span>7&euro;99</span></button></figcaption>
+          <figcaption>
+            <h5>Princesses Disney - Poupée tournoyante</h5>
+            <button><span>7&euro;99</span></button>
+          </figcaption>
         </figure>
 
       </div>
