--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,6 +6,67 @@
   <title></title>
 </head>
 <body>
+  <header>
+     <img class="logo" src="../assets/logo/Gifti5.png">
+   <nav>
+
+    <ul>
+      <li><a href="moinde5ans.html">Moins de 5 ans</a></li>
+      <li><a href="#filles">Filles</a></li>
+      <li><a href="#garçons">Garçons</a></li>
+      <li><a href="#jeuxdesociété">Jeux de Société</a></li>
+      <li><a href="#jeuxvidéos">Jeux vidéos</a></li>
+      <li><a href="#contact">Contacts</a></li>
+      <li><a href="#jeuxpromotionnels">Jeux promotionnels</a></li>
+    </ul>
+   </nav>
+ </header>
+
+<!-- contact physique-->
+<section id="contact1">
+   <div class="adresse">
+     <h1>Notre Adresse</h1>
+   </div>
+   <div class="telephone">
+     <h1>Comment nous joindre</h1>
+   </div>
+</section>
+
+<!-- contact réseaux -->
+<section id="réseaux">
+  <div class="mail">
+   <h1>Notre adresse mail</h1>
+  </div>
+  <div class="facebook-twitter">
+   <h1>Follow us!</h1>
+   </br>
+   <h2>Suivez les bons plans</h2>
+  </div>
+</section>
+
+<!-- footer-->
+<footer>
+  <div class="Copyright">Copyright &copy; 2018
+    <ul class="bas">
+      <li><a href="https://fr-fr.facebook.com/" target="_blank"></a>
+        <i class="fab fa-facebook-square"></i>
+      </li>
+      <li><a href="https://twitter.com/?lang=fr" target="_blank"></a>
+        <i class="fab fa-twitter-square"></i>
+      </li>
+      <li><a href="https://www.instagram.com/?hl=fr" target="_blank"></a>
+        <i class="fab fa-instagram"></i>
+      </li>
+      <li><a href="https://fr-fr.messenger.com/" target="_blank"></a>
+        <i class="fab fa-facebook-messenger"></i>
+      </li>
+      <li><a href="https://maps.google.com/"></a>
+      </li>
+    </ul>
+  </div>
+
+</footer>
+<script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 
 </body>
 </html>
