page moins de 5 ans V2.2

--- a/pages/moinde5ans.html
+++ b/pages/moinde5ans.html
@@ -17,52 +17,112 @@
 
       <div class="top">
 
-        <figure>
-          <img src="../assets/jouet_moin_de_5_ans/Boitede60feutres.jpg" alt="Boite de 60 feutres" />
-          <figcaption>
-            <h5>Boite de 60 feutres</h5>
+          <div class="imgs">
+            <h5>Boite <br> de 60 feutres</h5>
+            <img src="../assets/jouet_moin_de_5_ans/Boitede60feutres.jpg" alt="Boite de 60 feutres" />
             <button><span>24&euro;99</span></button>
             <p class="jouets"> Les enfants peuvent créer, dessiner, colorier et ainsi laisser libre cours à leur créativité.<br><br>Ce maxi kit est composé de :<br>- 36 mini feutres à colorier<br>- 8 mini feutres pour fenêtres<br>- 16 feutres à pointe folle<br>- 5 pochoirs<br><br>Ces feutres se lavent à l'eau et au savon sur la peau, et en machine pour les textiles lavables.</p>
-          </figcaption>
-        </figure>
+          </div>
 
-        <figure>
-          <img src="../assets/jouet_moin_de_5_ans/Scenedeconcertcabriolet.jpg" alt="Flipsies Scène de Concert Cabriolet" />
-          <figcaption>
-            <h5>Flipsies Scène de Concert Cabriolet</h5>
+          <div class="imgs">
+            <h5>Camion Jungle <br> Pat-Patrouille</h5>
+            <img src="../assets/jouet_moin_de_5_ans/Camion_Jungle.jpg" alt="Camion Jungle pat Patrouille">
+            <button><span>89&euro;99</span></button>
+            <p>Le véhicule de secours ultime aux couleurs de la Jungle ! Votre petit pourra y garer jusqu'à 6 véhicules de la Pat'Patrouille lorsqu'il est déployé et partir à l'aventure où il voudra.<br>Les chiots de la Pat'Patrouille peuvent garer leurs véhicules à l'intérieur et ainsi partir à l'aventure n'importe où ! Rien de tel pour transporter toute l'équipe vers de nouvelles destinations exotiques. Le camion de la Pat'Patrouille est livré avec Ryder et son quad.<br>Le camion comprend un ascenseur pour transférer les véhicules des chiots au QG de Ryder! Amitié, courage et travail d'équipe sont au programme avec les chiots de la Pat'Patrouille ! Leurs péripéties stimuleront l'imagination des enfants.<br>Contenu de la boite : 1 camion, 1 figurine Ryder Jungle et 1 voiture.</p>
+          </div>
+
+          <div class="imgs">
+            <h5>Zoomer <br> pony</h5>
+            <img src="../assets/jouet_moin_de_5_ans/Zoomer_pony.jpg" alt="Zoomer pony" />
+            <button><span>109&euro;99</span></button>
+            <p>Zoomer Pony est un animal interactif qui se déplace comme un vrai poney et qui réagit quand on lui donne ses accessoires.<br>Ce robot se déplace de façon autonome et réaliste. Comme un animal de compagnie, elle est capable de suivre l'enfant grâce à ses capteurs.<br>Ses yeux indiquent ce qu'elle ressent. Votre enfant devra être à son écoute et la brosser, lui donner à manger et prendre soin d'elle.<br>La boîte contient Zoomer Pony et 4 accessoires : une pomme, une carotte, un dé de sucre et une brosse.<br><br>Nécessite 4 piles LR06 non incluses</p>
+          </div>
+
+          <div class="imgs">
+            <h5>Flipsies Scène <br>de Concert Cabriolet</h5>
+            <img src="../assets/jouet_moin_de_5_ans/Scenedeconcertcabriolet.jpg" alt="Flipsies Scène de Concert Cabriolet" />
             <button><span>15&euro;00</span></button>
-          </figcaption>
-        </figure>
+            <p>Bienvenue sur la scène de concert de Jazz.<br>Elle rêve de devenir une Rock Star.<br>Le cabriolet se transforme en scène de concert. <br>Lorsqu'on place Jazz sur le "Smart point" elle reconnait le cabriolet ou la scène de concert et se met à parler et chanter.<br>Magique, les phares du cabriolet s'illuminent.<br>Grâce à ses 10 accessoires inclus (2 coupes de cheveux, 2 vêtements, 1paire de lunettes et 5 accessoires), Jazz se métamorphose entièrement en styliste pour vivre en son rêve dans l'univers de la mode.<br><br>Les piles sont incluses.</p>
+          </div>
 
-        <figure>
+          <div class="imgs">
+            <h5>Pyjamasques <br> Coffret 16 figurines</h5>
+            <img src="../assets/jouet_moin_de_5_ans/Pyjamasqes16Figurines.jpg" alt="Pyjamasques Coffret 16 figurines">
+            <button><span>59&euro;99</span></button>
+            <p>Ce coffret regroupe 16 figurines issues du dessin animé Pyjamasques.<br>Comme eux, inventez-vous des nouveaux défis afin de les régler la nuit.<br>Un ensemble complet avec des personnages articulés de 8 cm et des accessoires.<br>Retrouvez les trois héros de Pyjamasques : Sacha, Amalaya et Greg, 3 "mauvais", 7 accessoires et 3 mini ninja empilables.</p>
+          </div>
+
+        <div class="imgs">
+          <h5>Remorque <br> de ferme</h5>
           <img src="../assets/jouet_moin_de_5_ans/Remorquefarm.jpg" alt="Remorque de ferme" />
-          <figcaption>
-            <h5>Remorque de ferme</h5>
-            <button><span>8&euro;00</span></button>
-          </figcaption>
-        </figure>
+          <button><span>8&euro;00</span></button>
+          <p>Remorque grand volume pour tout transporter.<br>Adaptable sur tous les tracteurs Falk.<br><br>Dimensions : L 68 cm x l 52 cm.<br><br>Conseillé de 3 à 7 ans.</p>
+        </div>
 
-        <figure>
+        <div class="imgs">
+          <h5>Circuit <br> train de marchandises</h5>
+          <img src="../assets/jouet_moin_de_5_ans/Circuit_train_de_marchandise.jpg" alt="Circuit train de marchandises">
+          <button><span>5&euro;99</span></button>
+          <p>Ce circuit de marchandises en bois est idéal pour les amateurs de trains.<br>Transportez les marchandises à l'aide de la locomotive et des wagons en bois. Arrêtez-vous devant la grue et déchargez les différents éléments grâce aux aimants.<br>Les jeunes conducteurs de train vont bien s'amuser !<br>Ce coffret contient 43 pièces dont une locomotive, 3 wagons et une voiture.</p>
+        </div>
+
+        <div class="imgs">
+          <h5>Kokum <br> Le lionceau</h5>
+          <img src="../assets/jouet_moin_de_5_ans/Kokum_le_lionceau.jpg" alt="Kokum Le lionceau">
+          <button><span>49&euro;99</span></button>
+          <p>Kokum le lionceau est une peluche intéractive. <br><br> Il peut apprendre beaucoup de choses, et répond à 15 ordres différents comme "assis", "saute"... <br> Entrainez votre petit lion afin qu'il vous obéisse.<br> Les piles sont incluses.</p>
+        </div>
+
+        <div class="imgs">
+          <h5>Aspergeur <br> poisson</h5>
           <img src="../assets/jouet_moin_de_5_ans/Aspergeurpoisson.jpg" alt="Aspergeur d'eau en forme de poisson" />
-          <figcaption>
-            <h5>Aspergeur poisson</h5>
-            <button><span>6&euro;00</span></button>
-          </figcaption>
-        </figure>
+          <button><span>6&euro;00</span></button>
+          <p>Les aspergeurs sont des petits jouets simples pour le bain aux jolies couleurs et aux personnages variés. Le design rigolo est spécialement conçu pour les petites mains pour plus de maniabilité. Le plastique est résistant et doux pour masser les gencives de bébé qui aime les mordiller. Les aspergeurs flottent et détiennent un trou sur chacun d’entre eux pour faire gicler l’eau. <br>Ils sont chacun moulés en une seule pièce, aucun élément à perdre ! Ludique ces jouets accompagnent les enfants dans leur développement. En grandissant, ils commencent à reconnaître les couleurs, les noms des véhicules puis à créer leur propre histoire. Le bain devient un réel moment de détente et de plaisir ! Leurs thématiques aideront bébé à développer son habileté et son imagination.<br>Adapté pour les enfants à partir de 10 mois.<br><br>Dimension : 7 cm.<br>Composition : 100 % PVC. <br>Conforme à la réglementation, toutes les matières en plastique souple sont dépourvues de phtalates.<br>Égoutter les jouets après utilisation et rincer. Laver à l’eau claire régulièrement.</p>
+        </div>
 
-        <figure>
+        <div class="imgs">
+          <h5>Trycicle <br> pliable</h5>
+          <img src="../assets/jouet_moin_de_5_ans/Trycicle_pliable.jpg" alt="Trycicle pliable">
+          <button><span>49&euro;99</span></button>
+          <p>Votre enfant pourra effectuer de belles balades avec ce tricycle coloré.<br>De plus votre enfant pourra transporter son doudou et des jouets grâce à sa petite remorque et sa petite panière à l'avant.<br>Le tricycle se plie pour un rangement plus facile et la poignée intégré au siège permet de le transporter facilement.<br>Grâce a son large siège l'enfant a un meilleur confort.<br><br>Pour les enfants de 2 à 5 ans. </p>
+        </div>
+
+        <div class="imgs">
+          <h5>Tableau <br> chevalet 3en1</h5>
+          <img src="../assets/jouet_moin_de_5_ans/Tableau_chevalet3en1.jpg" alt="Tableau chevalet 3en1">
+          <button><span>12&euro;99</span></button>
+          <p>Un tableau pour dessiner au feutre, à la craie ou écrire sur du papier.<br>Une face ardoise pour écrire à la craie, une face blanche pour feutre effaçable à sec et des clips pour tenir du papier et écrire dessus. Votre enfant pourra dessiner, écrire ou faire ses devoirs.<br>Il dispose d'un plateau de rangement très pratique.<br>Livré avec une éponge, des crayons de cire et des craies.<br><br>Dimensions : 42 x 30 cm, avec le cadre : 53,5 x 38,5 cm.</p>
+        </div>
+
+        <div class="imgs">
+          <h5>Princesses Disney <br> Poupée tournoyante</h5>
           <img src="../assets/jouet_moin_de_5_ans/Princessedysney.jpg" alt="Princesses Disney - Poupée tournoyante" />
-          <figcaption>
-            <h5>Princesses Disney - Poupée tournoyante</h5>
-            <button><span>7&euro;99</span></button>
-          </figcaption>
-        </figure>
+          <button><span>7&euro;99</span></button>
+          <p>Amusez-vous avec les poupées Disney !<br>Votre enfant sera ravi de pouvoir s'amuser durant des heures avec ce jouet, représentant une Princesse de l'univers Disney.<br>Les histoires pourront être inventées ou même directement tirées de l'univers de chaque princesse, qui n'a surement plus de secrets pour votre enfant.<br>Fait partie d'un assortiment.<br>Livré à l'unité.<br>Livré selon disponibilité</p>
+        </div>
 
-      </div>
-    </section>
+        <div class="imgs">
+          <h5>Set 11 en 1 <br> avec poupon</h5>
+          <img src="../assets/jouet_moin_de_5_ans/Pouponde32cm.jpg" alt="Set 11 en 1 avec poupon de 32 cm" />
+          <button><span>1&euro;99</span></button>
+          <p>Tout le nécessaire disponible dans cet ensemble très complet, pour prendre soin des poupons.<br><br> Contient :<br>- Une poussette canne <br> - Un sac de couchage <br>- Une couverture <br>- Un biberon <br>- Des accessoires <br>- Un poupon de 32 cm avec sons... <br><br>Fonctionne avec 3 piles LR44 incluses. </p>
+        </div>
 
-    <section id="objet de vente">
-      <div class="">
+
+        <div class="imgs">
+          <h5>Albert camion burger</h5>
+          <img src="../assets/jouet_moin_de_5_ans/Albert_camion_burger.jpg" alt="Albert camion burger" />
+          <button><span>12&euro;99</span></button>
+          <p>Albert le camion à burger est un jouet interactif qui imite les célèbres Food Trucks !<br>Ce camion cuisine propose de nombreuses activités manuelles et électroniques qui aideront à l'éveil de votre enfant.<br>Avec ses accessoires de cuisine, l’enfant devient un vrai petit chef ! Il peut faire la cuisine, préparer l'addition et servir les plats qu'il a préparé. Avec ce jeu d'imitation, il pourra développer ses compétences linguistiques, apprendre les chiffres et accroître sa concentration. S'il préfère jouer avec le véhicule, aucun problème, la cuisine devient une véritable camion à roue libre !<br><br>Nécessite 3 piles LR06 incluses.</p>
+        </div>
+
+        <div class="imgs">
+          <h5>Tentes Avec Enfants <br>Playmobil Summer Fun</h5>
+          <img src="../assets/jouet_moin_de_5_ans/Playmobile_summer.jpg" alt="Tentes Avec Enfants Et Animatrice - Playmobil Summer Fun" />
+          <button><span>39&euro;99</span></button>
+          <p>Les enfants et leur animatrices sont partis avec leurs tentes pour faire du camping sauvage.<br> Après une veillée autour du feu de camp éclairé, les enfants se glissent dans leurs sacs de couchage et s'endorment sous leur tente en toile avec une armature. Avec feu de camp éclairé.<br>Contient : <br>- 1 adulte <br>- 2 enfants <br>- 2 tentes <br>- 2 ratons laveurs <br>- 1 arbre <br>- 1 feu de camp <br>- Des accessoires (sacs de couchage, boussole, guitare, sacs à dos…) <br><br>Fonctionne avec 2 piles LR03 non fournies.</p>
+        </div>
+
 
       </div>
     </section>
