--- a/pages/accueil.html
+++ b/pages/accueil.html
@@ -7,9 +7,13 @@
   </head>
     <body>
       <header>
-         <img class="logo" src="../assets/logo/Gifti5.png">
+        <!-- Pour le go to top -->
+        <a name="haut" id="haut"></a>
+        <div><a id="cRetour" class="cInvisible" href="#haut"></a></div>
+       <!-- Logo -->
+       <img class="logo" src="../assets/logo/Gifti5.png">
+       <!-- Nav -->
        <nav>
-
         <ul>
           <li><a href="moinde5ans.html">Moins de 5 ans</a></li>
           <li><a href="#filles">Filles</a></li>
@@ -82,5 +86,8 @@
 
     </footer>
     <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+
+    <!-- Bouton go to top -->
+    <script type="text/javascript" src="../js/goToTop.js"></script>
   </body>
 </html>
