Dernier push du vendredi

--- a/pages/accueil.html
+++ b/pages/accueil.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/accueil.css">
-    <title></title>
+    <title>Accueil | Giti</title>
   </head>
     <body>
       <header>
@@ -21,7 +21,7 @@
           <li><a href="#jeuxdesociété">Jeux de Société</a></li>
           <li><a href="#jeuxvidéos">Jeux vidéos</a></li>
           <li><a href="#contact">Contacts</a></li>
-          <li><a href="#jeuxpromotionnels">Jeux promotionnels</a></li>
+          <li><a href="game.html">Jeux promotionnels</a></li>
         </ul>
        </nav>
      </header>
@@ -58,6 +58,7 @@
 <!-- bannière jeux promotionnels -->
     <section id="réductions">
       <div class="réductions">
+        <a href="game.html"><div id="game_img"></div></a>
        <h1>Viens jouer!</h1>
        <h2>et gagne des bons de réduction<h2>
       </div>
