--- a/pages/game.html
+++ b/pages/game.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="../css/accueil.css">
 
-    <title>Test jeu</title>
+    <title>Jeu promotionnel | Gifti</title>
   </head>
   <body>
     <header>
@@ -43,7 +43,7 @@
    </header>
 
    <!-- Div qui contient le jeu -->
-    <div id="game" style="margin:50px"></div>
+    <div id="game" style="margin:10px"></div>
 
     <!-- footer-->
     <footer>
