pages moins de 5 ans edit

--- a/pages/moinde5ans.html
+++ b/pages/moinde5ans.html
@@ -9,6 +9,23 @@
 
   <body id="gris">
 
+    <header>
+       <img class="logo" src="../assets/logo/Gifti5.png">
+     <nav>
+
+      <ul>
+        <li><a href="moinde5ans.html">Moins de 5 ans</a></li>
+        <li><a href="#filles">Filles</a></li>
+        <li><a href="#garçons">Garçons</a></li>
+        <li><a href="#jeuxdesociété">Jeux de Société</a></li>
+        <li><a href="#jeuxvidéos">Jeux vidéos</a></li>
+        <li><a href="#contact">Contacts</a></li>
+        <li><a href="#jeuxpromotionnels">Jeux promotionnels</a></li>
+      </ul>
+     </nav>
+    </header>
+
+
     <section id="Description" >
       <p class="descriptif">Vous trouverez ici des jouets pour les enfants de 0 a 5 ans, pour les guider dans leur éveil et leur développement tout en s’amusant. Allant du doudou au tricycle ou du coloriage au jeu de construction votre enfant n’aura qu’une seule limite son imagination.</p>
     </section>
@@ -126,6 +143,30 @@
 
       </div>
     </section>
+
+    <!-- footer-->
+        <footer>
+          <div class="Copyright">Copyright &copy; 2018
+            <ul class="réseaux">
+              <li><a href="https://fr-fr.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+
+              </li>
+              <li><a href="https://twitter.com/?lang=fr" target="_blank"><i class="fab fa-twitter-square"></i></a>
+
+              </li>
+              <li><a href="https://www.instagram.com/?hl=fr" target="_blank"><i class="fab fa-instagram"></i></a>
+
+              </li>
+              <li><a href="https://fr-fr.messenger.com/" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
+
+              </li>
+              <li><a href="https://maps.google.com/"></a>
+              </li>
+            </ul>
+          </div>
+
+        </footer>
+        <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 
   </body>
 </html>
