ajout jouer pour fille

--- a/pages/moinde5ans.html
+++ b/pages/moinde5ans.html
@@ -11,6 +11,7 @@
 
     <header>
        <img class="logo" src="../assets/logo/Gifti5.png">
+       <br><br>
      <nav>
 
       <ul>
@@ -25,11 +26,11 @@
      </nav>
     </header>
 
-
+<br><br><br>
     <section id="Description" >
       <p class="descriptif">Vous trouverez ici des jouets pour les enfants de 0 a 5 ans, pour les guider dans leur éveil et leur développement tout en s’amusant. Allant du doudou au tricycle ou du coloriage au jeu de construction votre enfant n’aura qu’une seule limite son imagination.</p>
     </section>
-
+    <br><br><br>
     <section id="Top vente et promo" >
 
       <div class="top">
@@ -143,27 +144,18 @@
 
       </div>
     </section>
-
+    <br><br><br><br>
     <!-- footer-->
         <footer>
-          <div class="Copyright">Copyright &copy; 2018
-            <ul class="réseaux">
-              <li><a href="https://fr-fr.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+          <p id="copy"><a href="Mention-legale.html">Copyright</a> &copy; 2017 <span>RoKeTe</span></p>
+          <p id="icone">
+            <a href="https://fr-fr.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://twitter.com/?lang=fr" target="_blank"><i class="fab fa-twitter-square"></i></a>
+            <a href="https://www.instagram.com/?hl=fr" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://fr-fr.messenger.com/" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
+            <a href="https://maps.google.com/"></a>
+          </p>
 
-              </li>
-              <li><a href="https://twitter.com/?lang=fr" target="_blank"><i class="fab fa-twitter-square"></i></a>
-
-              </li>
-              <li><a href="https://www.instagram.com/?hl=fr" target="_blank"><i class="fab fa-instagram"></i></a>
-
-              </li>
-              <li><a href="https://fr-fr.messenger.com/" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
-
-              </li>
-              <li><a href="https://maps.google.com/"></a>
-              </li>
-            </ul>
-          </div>
 
         </footer>
         <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
