--- a/pages/moinde5ans.html
+++ b/pages/moinde5ans.html
@@ -160,5 +160,8 @@
         </footer>
         <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 
+        <!-- Pour la div de présentation des produits -->
+        <script type="text/javascript" src="../js/presentation_produit.js"></script>
+
   </body>
 </html>
