--- a/pages/moinde5ans.html
+++ b/pages/moinde5ans.html
@@ -10,17 +10,27 @@
   <body id="gris">
 
     <header>
+      <!-- Pour le go to top -->
+      <a name="haut" id="haut"></a>
+      <div><a id="cRetour" class="cInvisible" href="#haut"></a></div>
+
        <img class="logo" src="../assets/logo/Gifti5.png">
        <br><br>
      <nav>
 
       <ul>
         <li><a href="moinde5ans.html">Moins de 5 ans</a></li>
+        <li>|</li>
         <li><a href="#filles">Filles</a></li>
+        <li>|</li>
         <li><a href="#garçons">Garçons</a></li>
+        <li>|</li>
         <li><a href="#jeuxdesociété">Jeux de Société</a></li>
+        <li>|</li>
         <li><a href="#jeuxvidéos">Jeux vidéos</a></li>
+        <li>|</li>
         <li><a href="#contact">Contacts</a></li>
+        <li>|</li>
         <li><a href="#jeuxpromotionnels">Jeux promotionnels</a></li>
       </ul>
      </nav>
@@ -162,6 +172,8 @@
 
         <!-- Pour la div de présentation des produits -->
         <script type="text/javascript" src="../js/presentation_produit.js"></script>
+        <!-- Bouton go to top -->
+        <script type="text/javascript" src="../js/goToTop.js"></script>
 
   </body>
 </html>
