--- a/pages/game.html
+++ b/pages/game.html
@@ -17,7 +17,7 @@
     <script src="../js/game/game_over_state.js"></script>
     <script src="../js/game/victory_state.js"></script>
 
-    <link rel="stylesheet" href="../css/accueil.css">
+    <link rel="stylesheet" href="../css/game.css">
 
     <title>Jeu promotionnel | Gifti</title>
   </head>
@@ -26,49 +26,31 @@
       <!-- Pour le go to top -->
       <a name="haut" id="haut"></a>
       <div><a id="cRetour" class="cInvisible" href="#haut"></a></div>
-     <!-- Logo -->
-     <img class="logo" src="../assets/logo/Gifti5.png">
-     <!-- Nav -->
+
+       <div class="logo"><a href="accueil.html"><img class="logoImg" src="../assets/logo/Gifti5.png"></a></div>
+       <br><br>
      <nav>
+
       <ul>
         <li><a href="moinde5ans.html">Moins de 5 ans</a></li>
+        <li>|</li>
         <li><a href="#filles">Filles</a></li>
+        <li>|</li>
         <li><a href="#garçons">Garçons</a></li>
+        <li>|</li>
         <li><a href="#jeuxdesociété">Jeux de Société</a></li>
+        <li>|</li>
         <li><a href="#jeuxvidéos">Jeux vidéos</a></li>
+        <li>|</li>
         <li><a href="#contact">Contacts</a></li>
-        <li><a href="#jeuxpromotionnels">Jeux promotionnels</a></li>
+        <li>|</li>
+        <li><a href="game.html">Jeux promotionnels</a></li>
       </ul>
      </nav>
-   </header>
+    </header>
 
    <!-- Div qui contient le jeu -->
     <div id="game" style="margin:10px"></div>
-
-    <!-- footer-->
-    <footer>
-      <div class="Copyright">Copyright &copy; 2018
-        <ul class="réseaux">
-          <li><a href="https://fr-fr.facebook.com/" target="_blank"></a>
-            <i class="fab fa-facebook-square"></i>
-          </li>
-          <li><a href="https://twitter.com/?lang=fr" target="_blank"></a>
-            <i class="fab fa-twitter-square"></i>
-          </li>
-          <li><a href="https://www.instagram.com/?hl=fr" target="_blank"></a>
-            <i class="fab fa-instagram"></i>
-          </li>
-          <li><a href="https://fr-fr.messenger.com/" target="_blank"></a>
-            <i class="fab fa-facebook-messenger"></i>
-          </li>
-          <li><a href="https://maps.google.com/"></a>
-          </li>
-        </ul>
-      </div>
-
-    </footer>
-    <!-- FontAwesome -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 
     <!-- Script du jeu -->
     <script type="text/javascript">
@@ -84,7 +66,22 @@
       Gifti.game.state.start('Boot');
     </script>
 
-    <!-- Bouton go to top -->
-    <script type="text/javascript" src="../js/goToTop.js"></script>
+    <!-- footer-->
+        <footer>
+          <p id="copy"><a href="Mention-legale.html">Copyright</a> &copy; 2017 <span>RoKeTe</span></p>
+          <p id="icone">
+            <a href="https://fr-fr.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://twitter.com/?lang=fr" target="_blank"><i class="fab fa-twitter-square"></i></a>
+            <a href="https://www.instagram.com/?hl=fr" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://fr-fr.messenger.com/" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
+            <a href="https://maps.google.com/"></a>
+          </p>
+
+
+        </footer>
+        <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+
+        <!-- Bouton go to top -->
+        <script type="text/javascript" src="../js/goToTop.js"></script>
   </body>
 </html>
