--- a/pages/moinde5ans.html
+++ b/pages/moinde5ans.html
@@ -31,7 +31,7 @@
         <li>|</li>
         <li><a href="#contact">Contacts</a></li>
         <li>|</li>
-        <li><a href="#jeuxpromotionnels">Jeux promotionnels</a></li>
+        <li><a href="game.html">Jeux promotionnels</a></li>
       </ul>
      </nav>
     </header>
