--- a/index.html
+++ b/index.html
@@ -2,9 +2,27 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>Giti | Vente de jouets en ligne</title>
   </head>
   <body>
+    <div class="logo"><a href="pages/accueil.html"><img class="logoImg" src="assets/logo/Gifti5.png"></a></div>
 
+    <button onclick="accederAuSite()" class="accederAuSite"><span>Accéder au site</span></button>
+
+    <div class="slider">
+      <img class="mySlides" src="assets/index/actu_slide_1.png">
+      <img class="mySlides" src="assets/index/actu_slide_2.png">
+      <img class="mySlides" src="assets/index/actu_slide_3.png">
+      <button class="button display-left" onclick="plusDivs(-1)">&#10094;</button>
+      <button class="button display-right" onclick="plusDivs(+1)">&#10095;</button>
+      <div class="badgeDiv">
+        <div class="badge demo border white" onclick="currentDiv(1)"></div>
+        <div class="badge demo border" onclick="currentDiv(2)"></div>
+        <div class="badge demo border" onclick="currentDiv(3)"></div>
+      </div>
+    </div>
   </body>
+
+  <script type="text/javascript" src="js/index.js"></script>
 </html>
