ajout des pages de ventes

--- a/pages/fille.html
+++ b/pages/fille.html
@@ -239,5 +239,6 @@ Contient : <br>
     </footer>
     <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 
+    <script type="text/javascript" src="../js/presentation_produit.js"></script>
 </body>
 </html>
