Edit page connexion v2

--- a/pages/accueil.html
+++ b/pages/accueil.html
@@ -66,8 +66,7 @@
     <section id="réductions">
       <div class="réductions">
         <a href="game.html"><div id="game_img"></div></a>
-       <h1>Viens jouer!</h1>
-       <h2>et gagne des bons de réduction<h2>
+       <!--<h1>Viens jouer!</h1><h2>et gagne des bons de réduction<h2>-->
       </div>
     </section>
 
